--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,23 +15,31 @@
     </section>
     <section class="grid">
       <div class="card">
-        <img src="./assets/css-icon1.png" alt="asd" height="75" width="75">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti labore recusandae
+        <img src="./assets/css-icon1.png" alt="asd">
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti
+          labore recusandae
           est cum? Necessitatibus voluptas consectetur deserunt. Sed ipsum fugiat at rerum iure nihil ipsa amet
-          reiciendis!</p>
+          reiciendis!</div>
       </div>
       <div class="card">
-        <img src="./assets/css-icon1.png" alt="asd" height="75" width="75">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti labore recusandae
+        <img src="./assets/html-icon1.png" alt="asd">
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti
+          labore recusandae
           est cum? Necessitatibus voluptas consectetur deserunt. Sed ipsum fugiat at rerum iure nihil ipsa amet
-          reiciendis!</p>
+          reiciendis!</div>
       </div>
       <div class="card">
-        <img src="./assets/css-icon1.png" alt="asd" height="75" width="75">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti labore recusandae
+        <img src="./assets/url-icon1.png" alt="asd">
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti
+          labore recusandae
           est cum? Necessitatibus voluptas consectetur deserunt. Sed ipsum fugiat at rerum iure nihil ipsa amet
-          reiciendis!</p>
+          reiciendis!</div>
       </div>
+    </section>
+  </div>
+  <div class="footer">
+    <section>
+      <app-footer></app-footer>
     </section>
   </div>
 </div>
