--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,52 +1,83 @@
 .container {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .main {
-    flex: 1;
-} 
+  padding-left: 150px;
+  flex: 1;
+}
 
 section {
-    margin: 20px 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  margin: 20px 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .banner {
-    // width: 100%;
+  // width: 100%;
 }
 
 section.title {
-    background-color: #efefef;
-    padding: 38px;
-    h1 {
-        font-weight: bold;
-        font-size: 18px;
-        margin: 0;
-        margin-bottom: 18px;
-    }
-    p {
-        margin: 0;
-        padding: 0 120px;
-        text-align: center;
-    }
+  background-color: #efefef;
+  padding: 38px;
+  h1 {
+    font-weight: bold;
+    font-size: 18px;
+    margin: 0;
+    margin-bottom: 18px;
+  }
+  p {
+    margin: 0;
+    padding: 0 120px;
+    text-align: center;
+  }
 }
 
 .grid {
-    display: flex;
-    flex-direction: row;
-    // flex-wrap: wrap;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  // flex-wrap: wrap;
 }
 
 .card {
-    // img {
-    //     float: left;
-    // }
-    // p {
-    //     float: right;
-    // };
+  width: 50%;
+  margin: 0 20px;
+  img {
+    float: left;
+    width: 75px;
+    height: 75px;
+    padding: 0 10px 0 0;
+  }
+  .text {
+    text-align: justify;
+  }
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.footer {
+  width: 100%;
+  background-color: #fff;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 150px;
+  padding: 16px 0;
+  section {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
 }
