--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,23 +1,27 @@
-@import '../../styles.scss';
+@import "../../styles.scss";
 
 ul.sidebar-container {
-    margin-top: 0;
-    padding: 0;
-    width: 150px;
-    height: 100%;
-    background-color: $sidebar-color;
-
-    li {
-        display: flex;
-        flex-direction: column;
-        padding: 8px;
-        color: $text-color;
-        border-bottom: 1px solid #5c5c5c;
-        font-size: 16px;
-        font-weight: 700;
-        &:hover {
-            background-color: $sidebar-hover-color;
-            color: white;
-        }
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin-top: 0;
+  padding: 0;
+  width: 150px;
+  height: 100%;
+  background-color: $sidebar-color;
+  z-index: 10;
+  li {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    color: $text-color;
+    border-bottom: 1px solid #5c5c5c;
+    font-size: 16px;
+    font-weight: 700;
+    &:hover {
+      background-color: $sidebar-hover-color;
+      color: white;
     }
+  }
 }
