--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,21 +15,24 @@
     </section>
     <section class="grid">
       <div class="card">
-        <img src="./assets/css-icon1.png" alt="asd">
+        <h3>Lorem ipsum dolor sit amet?</h3>
+        <img src="./assets/css-icon1.png" alt="image">
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti
           labore recusandae
           est cum? Necessitatibus voluptas consectetur deserunt. Sed ipsum fugiat at rerum iure nihil ipsa amet
           reiciendis!</div>
       </div>
       <div class="card">
-        <img src="./assets/html-icon1.png" alt="asd">
+        <h3>Lorem ipsum dolor sit amet?</h3>
+        <img src="./assets/html-icon1.png" alt="image">
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti
           labore recusandae
           est cum? Necessitatibus voluptas consectetur deserunt. Sed ipsum fugiat at rerum iure nihil ipsa amet
           reiciendis!</div>
       </div>
       <div class="card">
-        <img src="./assets/url-icon1.png" alt="asd">
+        <h3>Lorem ipsum dolor sit amet?</h3>
+        <img src="./assets/url-icon1.png" alt="image">
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea doloremque deleniti
           labore recusandae
           est cum? Necessitatibus voluptas consectetur deserunt. Sed ipsum fugiat at rerum iure nihil ipsa amet
