--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -19,6 +19,7 @@ ul.sidebar-container {
     border-bottom: 1px solid #5c5c5c;
     font-size: 16px;
     font-weight: 700;
+    cursor: pointer;
     &:hover {
       background-color: $sidebar-hover-color;
       color: white;
